// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`stake reducer contractDUO 1`] = `
Object {
  "addresses": Object {
    "operator": "0x0",
    "priceFeedList": Array [],
  },
  "contractDUO": 0,
  "duo": 1000,
  "oracleStake": Object {},
  "states": Object {
    "canStake": false,
    "canUnstake": false,
    "lockMinTimeInSecond": 300,
    "maxStakePerOracle": 100000,
    "minStakeAmt": 500,
    "totalAwardsToDistribute": 0,
  },
  "subscription": undefined,
  "userAward": 0,
  "userStake": Object {},
}
`;

exports[`stake reducer default 1`] = `
Object {
  "addresses": Object {
    "operator": "0x0",
    "priceFeedList": Array [],
  },
  "contractDUO": 0,
  "duo": 0,
  "oracleStake": Object {},
  "states": Object {
    "canStake": false,
    "canUnstake": false,
    "lockMinTimeInSecond": 0,
    "maxStakePerOracle": 0,
    "minStakeAmt": 0,
    "totalAwardsToDistribute": 0,
  },
  "subscription": 0,
  "userAward": 0,
  "userStake": Object {},
}
`;

exports[`stake reducer oracleStake 1`] = `
Object {
  "addresses": Object {
    "operator": "0x0",
    "priceFeedList": Array [],
  },
  "contractDUO": 0,
  "duo": 1000,
  "oracleStake": Object {},
  "states": Object {
    "canStake": false,
    "canUnstake": false,
    "lockMinTimeInSecond": 300,
    "maxStakePerOracle": 100000,
    "minStakeAmt": 500,
    "totalAwardsToDistribute": 0,
  },
  "subscription": undefined,
  "userAward": 0,
  "userStake": Object {},
}
`;

exports[`stake reducer stakeAddress 1`] = `
Object {
  "addresses": Object {
    "operator": "0x0",
    "priceFeedList": Array [],
  },
  "contractDUO": 0,
  "duo": 0,
  "oracleStake": Object {},
  "states": Object {
    "canStake": false,
    "canUnstake": false,
    "lockMinTimeInSecond": 300,
    "maxStakePerOracle": 100000,
    "minStakeAmt": 500,
    "totalAwardsToDistribute": 0,
  },
  "subscription": 0,
  "userAward": 0,
  "userStake": Object {},
}
`;

exports[`stake reducer stakeBalance 1`] = `
Object {
  "addresses": Object {
    "operator": "0x0",
    "priceFeedList": Array [],
  },
  "contractDUO": 0,
  "duo": 1000,
  "oracleStake": Object {},
  "states": Object {
    "canStake": false,
    "canUnstake": false,
    "lockMinTimeInSecond": 300,
    "maxStakePerOracle": 100000,
    "minStakeAmt": 500,
    "totalAwardsToDistribute": 0,
  },
  "subscription": 0,
  "userAward": 0,
  "userStake": Object {},
}
`;

exports[`stake reducer stakeStates 1`] = `
Object {
  "addresses": Object {
    "operator": "0x0",
    "priceFeedList": Array [],
  },
  "contractDUO": 0,
  "duo": 0,
  "oracleStake": Object {},
  "states": Object {
    "canStake": false,
    "canUnstake": false,
    "lockMinTimeInSecond": 300,
    "maxStakePerOracle": 100000,
    "minStakeAmt": 500,
    "totalAwardsToDistribute": 0,
  },
  "subscription": 0,
  "userAward": 0,
  "userStake": Object {},
}
`;

exports[`stake reducer stakeSub Off 1`] = `
Object {
  "addresses": Object {
    "operator": "0x0",
    "priceFeedList": Array [],
  },
  "contractDUO": 0,
  "duo": 1000,
  "oracleStake": Object {},
  "states": Object {
    "canStake": false,
    "canUnstake": false,
    "lockMinTimeInSecond": 300,
    "maxStakePerOracle": 100000,
    "minStakeAmt": 500,
    "totalAwardsToDistribute": 0,
  },
  "subscription": undefined,
  "userAward": 0,
  "userStake": Object {},
}
`;

exports[`stake reducer stakeSub On 1`] = `
Object {
  "addresses": Object {
    "operator": "0x0",
    "priceFeedList": Array [],
  },
  "contractDUO": 0,
  "duo": 1000,
  "oracleStake": Object {},
  "states": Object {
    "canStake": false,
    "canUnstake": false,
    "lockMinTimeInSecond": 300,
    "maxStakePerOracle": 100000,
    "minStakeAmt": 500,
    "totalAwardsToDistribute": 0,
  },
  "subscription": undefined,
  "userAward": 0,
  "userStake": Object {},
}
`;

exports[`stake reducer userAward 1`] = `
Object {
  "addresses": Object {
    "operator": "0x0",
    "priceFeedList": Array [],
  },
  "contractDUO": 0,
  "duo": 1000,
  "oracleStake": Object {},
  "states": Object {
    "canStake": false,
    "canUnstake": false,
    "lockMinTimeInSecond": 300,
    "maxStakePerOracle": 100000,
    "minStakeAmt": 500,
    "totalAwardsToDistribute": 0,
  },
  "subscription": undefined,
  "userAward": 0,
  "userStake": Object {},
}
`;

exports[`stake reducer userStake 1`] = `
Object {
  "addresses": Object {
    "operator": "0x0",
    "priceFeedList": Array [],
  },
  "contractDUO": 0,
  "duo": 1000,
  "oracleStake": Object {},
  "states": Object {
    "canStake": false,
    "canUnstake": false,
    "lockMinTimeInSecond": 300,
    "maxStakePerOracle": 100000,
    "minStakeAmt": 500,
    "totalAwardsToDistribute": 0,
  },
  "subscription": undefined,
  "userAward": 0,
  "userStake": Object {},
}
`;
